[gd_scene load_steps=3 format=3 uid="uid://berj6wq4vxmk1"]

[ext_resource type="LabelSettings" uid="uid://dt4d8t41tnpa1" path="res://assets/GM_white_32.tres" id="1_khtkq"]
[ext_resource type="Script" path="res://scenes/hud/hud.gd" id="1_ytase"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_ytase")

[node name="MC" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VB" type="VBoxContainer" parent="MC"]
layout_mode = 2

[node name="HBLevel" type="HBoxContainer" parent="MC/VB"]
layout_mode = 2

[node name="Label" type="Label" parent="MC/VB/HBLevel"]
layout_mode = 2
text = "Level: "
label_settings = ExtResource("1_khtkq")

[node name="LabelLevel" type="Label" parent="MC/VB/HBLevel"]
layout_mode = 2
text = "1"
label_settings = ExtResource("1_khtkq")

[node name="HBMoves" type="HBoxContainer" parent="MC/VB"]
layout_mode = 2

[node name="Label" type="Label" parent="MC/VB/HBMoves"]
layout_mode = 2
text = "Moves: "
label_settings = ExtResource("1_khtkq")

[node name="LabelMoves" type="Label" parent="MC/VB/HBMoves"]
layout_mode = 2
text = "9999"
label_settings = ExtResource("1_khtkq")

[node name="HBBestMoves" type="HBoxContainer" parent="MC/VB"]
layout_mode = 2

[node name="Label" type="Label" parent="MC/VB/HBBestMoves"]
layout_mode = 2
text = "Best: "
label_settings = ExtResource("1_khtkq")

[node name="LabelBestMoves" type="Label" parent="MC/VB/HBBestMoves"]
layout_mode = 2
text = "-"
label_settings = ExtResource("1_khtkq")
